--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Risque' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-   
+    <!-- local css file should be after online ones-->
 
   </head>
 
